// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton has not changed the JSX layout of the page from previous snapshot - disabled 1`] = `
<button
  className="button buttonDisabled"
  disabled={true}
  onClick={[MockFunction]}
  type="button"
>
  <span
    aria-hidden="true"
    className="fas fa-CALENDAR iconSizeL iconColorGrey buttonIcon"
  />
  <span
    className="visually-hidden"
  >
    open calendar
  </span>
</button>
`;

exports[`IconButton has not changed the JSX layout of the page from previous snapshot 1`] = `
<button
  className="button"
  disabled={false}
  onClick={[MockFunction]}
  type="button"
>
  <span
    aria-hidden="true"
    className="fas fa-CALENDAR iconSizeL iconColorGrey buttonIcon"
  />
  <span
    className="visually-hidden"
  >
    open calendar
  </span>
</button>
`;
